--- a/travel.css
+++ b/travel.css
@@ -3,8 +3,8 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    13/07/2021
-Author:    Themewiz
+Last change:    26/10/2021
+Author:    creativemaze
 Primary use:    Travel
 -------------------------------------------------------------------*/
 
@@ -30,7 +30,7 @@ Primary use:    Travel
 -------------------------------------------------------------------*/
 
 /* 1. GENERAL
- ----------- */
+ ----------- */ 
 body,
 html{
 	width:100%;
@@ -94,7 +94,7 @@ ul{
 	font-size: 40px;
 	font-weight: 700;
 	display: block;
-	color: #ffffff;
+	color: #111111;
 	display: block;
 	text-align: left;
 	letter-spacing: 1px;
@@ -107,20 +107,11 @@ ul{
 	font-size: 16px;
 	font-weight: normal;
 	display: block;
-	color: #f2f2f2;
+	color: #696969;
 	letter-spacing: 1px;
 	text-align: left;
 	padding: 10px 0 0;
 	line-height: 1.5em;
-}
-
-.gray_info{
-	color: #696969;
-}
-
-.dark_head{
-	color: #111111;
-	margin-top: 0;
 }
 
 .top_group{
@@ -147,7 +138,6 @@ ul{
 	width: 165px;
 	min-height: 30px;
 	margin: 35px 0 0;
-    border: none;
     color: #111111;
     padding: 13px 15px;
     text-decoration: none;
@@ -166,7 +156,7 @@ ul{
 .box_col_button a:hover{
 	color: #ffffff;
 	background-color: #00cdac;
-	border-color: #ffffff;
+	border-color: #00cdac;
 }
 
 .bg_col{
@@ -178,22 +168,28 @@ ul{
 /* 2. HEADER
  ----------- */
 /* --- 2.1. Logo & Navigation --- */
-.navbar-header h2{
+nav.navbar.bootsnav .navbar-brand{
+    max-width: 200px !important; 	
+}
+
+.navbar-header a.navbar-brand{
+	text-decoration: none;
+	color: #ffffff;
+	transition: 0.5s;
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 22px;
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
+	padding-top: 28px;
 }
 
-.navbar-header a.navbar-brand{
-	text-decoration: none;
-	color: #ffffff !important;
-	transition: 0.5s;
+.navbar-header a.navbar-brand:hover{
+	color: #ffffff;
 }
 
 nav.navbar .navbar-brand img.logo{
-   max-width: 200px;
+   width: 100%;
    height: auto;
    display: block;
 }
@@ -444,7 +440,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
@@ -500,12 +496,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	display: block;
 	color: #ffffff;
 	padding: 0 12px;
+	line-height: 1.2em;
 }
 
 .header-title__sub{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 18px;
-	font-weight: normal;
+	font-weight: 500;
 	text-transform: capitalize;
 	display: block;
 	color: #ffffff;
@@ -568,8 +565,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	height: 100%;
 	margin-top: -142px;
 	margin-bottom: 9em;
-	padding: 5em 30px;
-	background-color: #00cdac;
+	padding: 6em 30px;
+	background-color: #eeeeee;
 }
 
 .travel_group_one{
@@ -593,7 +590,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	overflow: hidden;
 	margin: auto;
 	min-height: 150px;
-	transition: 0.5s;
 	margin-bottom: 30px;
 }
 
@@ -612,10 +608,10 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .bg_group{
 	overflow: hidden;
 	position: relative;
-	padding-bottom: 10px;
-	padding-right: 10px;
-	padding-top: 10px;
-	padding-left: 10px;
+	padding-bottom: 0;
+	padding-right: 12px;
+	padding-top: 12px;
+	padding-left: 12px;
 	background-color: #ffffff;
 }
 
@@ -634,14 +630,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .bg_name h3{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 20px;
+	font-size: 15px;
 	display: inline-block;
 	font-weight: 600;
 	color: #111111;
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.4em;
-	margin-top: 0;
+	margin: 0;
+	text-transform: uppercase;
 }
 
 .bg_content{
@@ -681,9 +678,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	display: inline-block;
 	overflow: hidden;
 	padding: 10px 16px;
-	color: #ffffff;
+	color: #111111;
 	cursor: pointer;
-	border: solid 1px #ffffff;
+	border: solid 1px #111111;
 	border-radius: 3px;
 }
 
@@ -718,20 +715,29 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 0 25px;
 }
 
-.travel_box{
+.icon_crumb{
 	max-width: 350px;
+	height: 1px;
+	display: block;
+	border-bottom: double 4px #ffffff;
+	margin: 0 auto 0;
+	transition: 0.5s;
+	visibility: hidden;
+	opacity: 0;
+}
+
+.travel_box{
+	max-width: 300px;
 	margin: auto;
 	padding: 25px 30px 0;
 	background-color: #ffffff; 
 	text-align: center;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
-	border-bottom: outset 3px #00cdac;
 	transition: 0.5s;
 }
 
 .travel_box:hover{
 	background-color: #00cdac;
-	border-color: #ffffff;
 }
 
 .day_col{
@@ -828,6 +834,11 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #ffffff;
 }
 
+.travel_col:hover .icon_crumb{
+	visibility: visible;
+	opacity: 1;
+}
+
 /* --- 3.3. Travel Area Three --- */
 .travel_area_three{
 	position: relative;
@@ -892,14 +903,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .travel_area{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: flex-start;
 	align-items: center;
 }
 
 .area_box{
 	max-width: 550px;
-	margin: auto;
+	margin: 0;
 }
 
 .area_box h2{
@@ -1021,7 +1032,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 150px;
 	min-height: 30px;
 	margin: 10px 0 20px;
-    border: none;
     color: #ffffff;
     padding: 13px 15px;
     text-decoration: none;
@@ -1086,7 +1096,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .tour_box{
 	position: relative;
 	overflow: hidden;
-	cursor: pointer;
 }
 
 .tour_image img{
@@ -1122,7 +1131,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	left: 15px;
 }
 
-.tour_title h5{
+.tour_title a{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
 	font-weight: 700;
@@ -1134,13 +1143,19 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-transform: uppercase;
 	background-color: #00cdac;
 	padding: 10px 15px;
-	margin: 0;
+	text-decoration: none;
+	transition: 0.5s;
+}
+
+.tour_title a:hover{
+	background-color: #ffffff;
+	color: #111111;
 }
 
 .featured_title h3{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 18px;
-	font-weight: 500;
+	font-weight: 600;
 	display: block;
 	color: #ffffff;
 	letter-spacing: 1px;
@@ -1155,7 +1170,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 0 0 9em;
 	min-height: 400px;
 	padding: 6em 25px;
-	background-color: #f7f7f7;
+	background-color: #eeeeee;
 }
 
 .travel_group_five{
@@ -1185,7 +1200,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	overflow: hidden;
 	margin: auto;
 	min-height: 150px;
-	transition: 0.5s;
 }
 
 .blog_image{
@@ -1227,7 +1241,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: 0.5s;
 	display: block;
 }
 
@@ -1403,12 +1416,10 @@ a.blog_btn:hover .blog_crumb{
 
 /* --- 3.7. Travel Area Seven --- */
 .travel_area_seven{
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	min-height: 300px;
+	max-width: 1280px;
+	margin: 0 auto;
+	padding: 0 30px;
+	min-height: 275px;
 	height: 100%;
 	background-color: #00cdac;
 }
@@ -1418,7 +1429,7 @@ a.blog_btn:hover .blog_crumb{
 	max-width: 1200px;
 	margin: 0 auto 2em;
 	padding: 0 35px;
-	margin-top:  -150px;
+	margin-top:  -200px;
 }
 
 .travel_group_eight{
@@ -1427,6 +1438,18 @@ a.blog_btn:hover .blog_crumb{
 	flex-wrap: wrap;
 	background-color: #ffffff;
 	padding: 40px 30px 0;
+	margin-top: 30px;
+}
+
+.bg_head{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 40px;
+	font-weight: 700;
+	display: block;
+	color: #ffffff;
+	letter-spacing: 1px;
+	text-align: center;
+	line-height: 1.3em;
 }
 
 .col_info{
@@ -1692,8 +1715,8 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header h2{
-		margin-top: 7px;
+	.navbar-header a.navbar-brand{
+		padding-top: 22px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -1773,11 +1796,6 @@ a.footer-brand img{
 		margin-bottom: 90px;
 	}
 	
-	.travel_group_four{
-		max-width: 750px;
-		margin: auto;
-	}
-	
 	.left_tour_col{
 		flex: 100%;
 		width: 100%;
@@ -1805,7 +1823,7 @@ a.footer-brand img{
 
 @media only screen and (max-width: 600px){
 	.header-title__main{
-		font-size: 40px;
+		font-size: 45px;
 	}
 	
 	.search-row input[type="text"]{
@@ -1814,7 +1832,8 @@ a.footer-brand img{
 	}
 	
 	.area_box h2,
-	.travel_heading{
+	.travel_heading,
+	.bg_head{
 		font-size: 30px;
 	}
 	
@@ -1845,6 +1864,16 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
+	.mid_tour_col{
+		flex: 100%;
+		width: 100%;
+	}
+
+	.right_tour_col{
+		flex: 100%;
+		width: 100%;
+	}
+	
 	.blog_col{
 		flex: 100%;
 		width: 100%;
@@ -1871,20 +1900,9 @@ a.footer-brand img{
 @media only screen and (max-width: 420px){
 	.bg_col,
 	.tour_image,
-	.travel_group_four,
 	.blog_col{
 		padding-left: 0;
 		padding-right: 0;
-	}
-	
-	.mid_tour_col{
-		flex: 100%;
-		width: 100%;
-	}
-
-	.right_tour_col{
-		flex: 100%;
-		width: 100%;
 	}
 	
 	.col_head h3{
@@ -1893,12 +1911,12 @@ a.footer-brand img{
 }
 
 @media only screen and (max-width: 320px){
-	.bg_name{
-		width: 210px;
+	.header-title__main{
+		font-size: 40px;
 	}
 	
-	.bg_name h3{
-		font-size: 16px;
+	.bg_name{
+		width: 220px;
 	}
 	
 	.col_head h3{
