--- a/corporate.css
+++ b/corporate.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    31/08/2021
+Last change:    08/11/2021
 Author:    creativemaze
 Primary use:    Corporate
 -------------------------------------------------------------------*/
@@ -120,18 +120,20 @@ ul{
  ----------- */
  
 /* --- 2.1. Logo & Navigation --- */
-.navbar-header h2{
-	font-family: 'Montserrat', Arial, sans-serif;
-	font-size: 22px;
-	font-weight: 700;
-	letter-spacing: 1px;
-	text-transform: uppercase;
+nav.navbar.bootsnav .navbar-brand{
+    max-width: 200px !important; 	
 }
 
 .navbar-header a.navbar-brand{
 	text-decoration: none;
 	color: #ffffff;
 	transition: 0.5s;
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-size: 22px;
+	font-weight: 700;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	padding-top: 28px;
 }
 
 .navbar-header a.navbar-brand:hover{
@@ -139,7 +141,7 @@ ul{
 }
 
 nav.navbar .navbar-brand img.logo{
-   max-width: 200px;
+   width: 100%;
    height: auto;
    display: block;
 }
@@ -543,7 +545,6 @@ li.slick-active button{
 }
 
 .corporate_col_one{
-	position: relative;
 	flex: 50%;
 	width: 50%;
 	padding: 0 20px;
@@ -566,7 +567,7 @@ li.slick-active button{
 }
 
 .corporate_col_box{
-	max-width: 600px;
+	max-width: 500px;
 	padding-right: 25px;
 }
 
@@ -579,7 +580,6 @@ li.slick-active button{
 	text-align: left;
 	letter-spacing: 1px;
 	line-height: 1.3em;
-	margin-top: 0;
 }
 
 .corporate_col_box > p{
@@ -906,7 +906,6 @@ li.slick-active button{
 	flex: 33.33%;
 	width: 33.33%;
 	padding: 0 15px;
-	overflow: hidden;
 	position: relative;
 }
 
@@ -925,7 +924,7 @@ li.slick-active button{
 }
 
 .wide_box{
-	max-width: 600px;
+	max-width: 500px;
 	padding: 0 20px
 }
 
@@ -1019,7 +1018,7 @@ li.slick-active button{
 }
 
 .corporate_slide_box{
-	max-width: 600px;
+	max-width: 500px;
 	position: relative;
 	text-align: center;
 	overflow: hidden;
@@ -1037,8 +1036,7 @@ li.slick-active button{
 	overflow: hidden;
 	position: relative;
 	text-align: center;
-	padding-top: 10px;
-	max-width: 300px;
+	padding: 10px 20px 0;
 }
 
 .featured_content h3{
@@ -1047,7 +1045,7 @@ li.slick-active button{
 	font-size: 18px;
 	font-weight: 600;
 	display: block;
-	text-align: left;
+	text-align: center;
 	letter-spacing: 1px;
 	line-height: 1.4em;
 }
@@ -1059,7 +1057,7 @@ li.slick-active button{
 	display: block;
 	color: #696969;
 	letter-spacing: 1px;
-	text-align: left;
+	text-align: center;
 	padding: 10px 0 0;
 	line-height: 1.5em;
 }
@@ -1069,7 +1067,7 @@ li.slick-active button{
 	font-size: 12px;
 	font-weight: 600;
 	letter-spacing: 1px;
-	text-align: left;
+	text-align: center;
 	text-transform: uppercase;
 	display: block;
 	color: #009fff;
@@ -1077,6 +1075,7 @@ li.slick-active button{
 	width: 110px;
 	transition: 0.5s;
     cursor: pointer;
+	margin: auto;
 }
 
 .area_button a::after{
@@ -1100,7 +1099,7 @@ li.slick-active button{
 	margin: 0;
 	min-height: 400px;
 	padding: 6em 25px;
-	background-color: #f6f6f6;
+	background-color: #eeeeee;
 }
 
 .corporate_group_five{
@@ -1145,8 +1144,8 @@ li.slick-active button{
 }
 
 .team_content{
-	padding-top: 15px;
-	padding-bottom: 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	text-align: center;
 }
 
@@ -1310,7 +1309,7 @@ li.slick-active button{
 .blog_col{
 	flex: 33.33%;
 	width: 33.33%;
-	padding: 0 20px;
+	padding: 0 25px;
 }
 
 .blog_box{
@@ -1330,17 +1329,13 @@ li.slick-active button{
 .blog_area{
 	overflow: hidden;
 	position: relative;
-	padding-bottom: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-left: 5px;
 	background-color: #ffffff;
 }
 
 .blog_content{
+	padding: 15px 0 0;
 	text-align: left;
-	padding: 15px 0;
-	padding-right: 5px;
+	padding-left: 15px;
 }
 
 .blog_date{
@@ -1383,12 +1378,12 @@ li.slick-active button{
 	text-decoration: none;
 	transition: 0.5s;
 	line-height: 1.4em;
+	padding: 6px 0;
 }
 
 a.blog_btn{
 	max-width: 120px;	
     color: #009fff;
-	padding-top: 10px;
     text-decoration: none;
 	text-transform: uppercase;
     display: inline-block;
@@ -1413,6 +1408,10 @@ a.blog_btn::after{
 	position: relative;
 }
 
+.blog_title a:hover{
+	opacity: 0.6;
+}
+
 a.blog_btn:hover{
 	color: #111111;
 }
@@ -1422,8 +1421,8 @@ a.blog_btn:hover{
 	width: 100%;
 	margin: 0 0 9em;
 	min-height: 400px;
-	padding: 6em 25px 8em;
-	background-color: #f6f6f6;
+	padding: 6em 25px 9em;
+	background-color: #eeeeee;
 }
 
 .corporate_group_eight{
@@ -1564,7 +1563,7 @@ a.blog_btn:hover{
 .col_info{
 	flex: 50%;
 	width: 50%;
-	margin-top: 15px;
+	margin-top: 35px;
 }
 
 .col_head h3{
@@ -1577,7 +1576,6 @@ a.blog_btn:hover{
 	text-align: left;
 	line-height: 1.3em;
 	max-width: 500px;
-	margin-top: 0;
 }
 
 .subscribe-row{
@@ -1646,6 +1644,7 @@ a.blog_btn:hover{
 	width: 25%;
 	padding: 0 20px;
 	max-width: 300px;
+	margin: 0 auto;
 }
 
 .footer_col{
@@ -1877,8 +1876,8 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header h2{
-		margin-top: 7px;
+	.navbar-header a.navbar-brand{
+		padding-top: 22px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -2030,6 +2029,7 @@ a.footer-brand img{
 	.footer_col{
 		flex: 100%;
 		width: 100%;
+		margin: 0;
 	}
 }
 
@@ -2057,5 +2057,9 @@ a.footer-brand img{
 @media only screen and (max-width: 320px){
 	.info_list > h3{
 		font-size: 14px;
+	}
+	
+	.col_head h3{
+		font-size: 20px;
 	}
 }
