--- a/consulting.css
+++ b/consulting.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    06/09/2021
+Last change:    11/11/2021
 Author:    creativemaze
 Primary use:    Consulting
 -------------------------------------------------------------------*/
@@ -118,18 +118,20 @@ ul{
  ----------- */
  
 /* --- 2.1. Logo & Navigation --- */
-.navbar-header h2{
-	font-family: 'Montserrat', Arial, sans-serif;
-	font-size: 22px;
-	font-weight: 700;
-	letter-spacing: 1px;
-	text-transform: uppercase;
+nav.navbar.bootsnav .navbar-brand{
+    max-width: 200px !important; 	
 }
 
 .navbar-header a.navbar-brand{
 	text-decoration: none;
 	color: #ffffff;
 	transition: 0.5s;
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-size: 22px;
+	font-weight: 700;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	padding-top: 30px;
 }
 
 .navbar-header a.navbar-brand:hover{
@@ -137,7 +139,7 @@ ul{
 }
 
 nav.navbar .navbar-brand img.logo{
-   max-width: 200px;
+   width: 100%;
    height: auto;
    display: block;
 }
@@ -443,7 +445,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .header-title__sub{
 	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 17px;
+	font-size: 18px;
 	font-weight: normal;
 	display: block;
 	color: #f2f2f2;
@@ -630,7 +632,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	display: block;
 }
 
-.square_area{
+.right_area{
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
@@ -1478,6 +1480,22 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     cursor: pointer;
 }
 
+.square_button > a::after{
+	content: "\203A";
+	font-size: 20px;
+	margin: 0;
+	padding: 0;
+	display: inline-block;
+	height: auto;
+	padding-left: 5px;
+	top: 1px;
+	position: relative;
+}
+
+.area_button > a:hover{
+	color: #111111;
+}
+
 .square_button > a:hover{
 	color: #111111;
 }
@@ -2116,6 +2134,7 @@ a.blog_btn:hover .blog_crumb{
 	width: 25%;
 	padding: 0 20px;
 	max-width: 300px;
+	margin: 0 auto;
 }
 
 .footer_col{
@@ -2334,8 +2353,8 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header h2{
-		margin-top: 7px;
+	.navbar-header a.navbar-brand{
+		padding-top: 22px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -2494,9 +2513,26 @@ a.footer-brand img{
 		padding: 0;
 	}
 	
+	.col_info input[type="email"]{
+		display: block;
+		width: 100%;
+	}
+	
+	.col_info input[type="submit"]{
+		margin-top: 20px;
+		display: block;
+		width: 100%;
+		margin-left: 0;
+	}
+	
+	.col_head h3{
+		font-size: 25px;
+	}
+	
 	.footer_col{
 		flex: 100%;
 		width: 100%;
+		margin: 0;
 	}
 }
 
@@ -2518,22 +2554,6 @@ a.footer-brand img{
 	.question_col{
 		padding-left: 0;
 		padding-right: 0;
-	}
-	
-	.col_info input[type="email"]{
-		display: block;
-		width: 100%;
-	}
-	
-	.col_info input[type="submit"]{
-		margin-top: 20px;
-		display: block;
-		width: 100%;
-		margin-left: 0;
-	}
-	
-	.col_head h3{
-		font-size: 25px;
 	}
 }
 
